--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                         <div id="header-right" class="flex mb-3" style="max-width: 700px;width: 100%;margin-left: auto;">
                                             <transition name="nav">
                                                 <ul class="flex responsive-wrap text-center align-center justify-around pc-only" v-show="isNav">
-                                                    <a href="/"><li>TOP</li></a>
+                                                    <a href="/introduction"><li>TOP</li></a>
                                                     <a href="#section1"><li>ABOUT ME</li></a>
                                                     <a href="#section2"><li>SKILL</li></a>
                                                     <a href="#section3"><li>PORTFOLIO</li></a>
@@ -92,7 +92,7 @@
                                                 <div class="menu-content">
                                                     <ul>
                                                         <li>
-                                                            <a href="/">TOP</a>
+                                                            <a href="/introduction">TOP</a>
                                                         </li>
                                                         <li>
                                                             <a href="#section2">SKILL</a>
@@ -397,7 +397,7 @@
                                 </div>
                             </div>
                             <ul class="flex pc-only responsive-wrap res_nav text-center align-center justify-around" style="width: 100%;">
-                                <a class="" href="/"><li>TOP</li></a>
+                                <a class="" href="/introduction"><li>TOP</li></a>
                                 <a class="" href="#section1"><li>ABOUT ME</li></a>
                                 <a href="#section2"><li>SKILL</li></a>
                                 <a href="#section3"><li>PORTFOLIO</li></a>
