一時的に無効

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                                 <div class="content-wrapper">
                                     <transition name="bottom">
                                         <div class="container1" v-show="obj.mymemo">
-                                            <p id="special2" class="message tra" style="padding: 4%;font-style: italic;"><span>My Memories</span><br class="pc">
+                                            <p id="special2" class="message tra" style="padding: 4%;font-style: italic;"><span><a class="text-white" target="_blank" href="http://mymemories.iliwyc.work/">My Memories</a></span><br class="pc">
                                             <div class="carousel">
                                                 <!-- <button class="prev" @click="carouselPrev" :disabled="disabled">PREV</button> -->
                                                 <!-- <button class="next" @click="carouselNext" :disabled="disabled">NEXT</button> -->
@@ -381,7 +381,7 @@
                                     <a href="https://twitter.com/aNp6KjSBlp02cs8" target="_blank"><img class="mx-3" style="max-width: 64px;max-height: 64px;" src="img/19.png" alt="twitter"></a>
                                 </div>
                             </div>
-                            <div class="footer-content flex" style="justify-content: space-around;margin-bottom: 3%;">
+                            <div class="footer-content flex" style="justify-content: space-between;margin-bottom: 3%;padding: 0 5%;">
                                 <div id="contact" class="res_nav ul">
                                     <div class="li" style="font-size: 20px;font-family: proxima-nova,sans-serif;padding-bottom: 10px;">Contact</div>
                                     <div class="li">〒156-0043</div>
