--- a/index.html
+++ b/index.html
@@ -5,51 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <meta name="description" content="現在web制作を本業としているエンジニア。今回はウェブアプリケーションのポートフォリオを紹介をさせて頂きます。">
+    <meta name="keyword" content="井上領 自己紹介">
     <meta property="og:url" content="http://lnoueryo98.sakura.ne.jp/lp/" />
     <meta property="og:title" content="My Portfolio" />
     <meta property="og:image" content="img/10.jpg" />
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <meta name="google-site-verification" content="Dj609s-gP15Aocfed0WOgIm503sE9umTAAh32N-cf3c" />
     <!-- <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="common.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <style>
-        @import url('https://fonts.googleapis.com/css?family=Proxima+Nova');
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100&display=swap');
-    [v-cloak] {
-      display: none;
-    }
-    .filter {
-        /* filter: blur(0.7px) brightness(1.8px); */
-        filter: blur(1px)brightness(2);
-    }
-    .prev {
-        position: absolute;
-        top: 50%;
-        left: 0;
-        font-weight: 400;
-        font-family: trajan-pro-3,serif;
-        font-size: 20px;
-        letter-spacing: .02em;
-        line-height: 1.3;
-        color: white;
-        background-color: transparent;
-        font-style: italic;
-        border: transparent;
-    }
-    .next {
-        position: absolute;
-        top: 50%;
-        right: 0;
-        font-weight: 400;
-        font-family: trajan-pro-3,serif;
-        font-size: 20px;
-        letter-spacing: .02em;
-        line-height: 1.3;
-        color: white;
-        background-color: transparent;
-        font-style: italic;
-        border: transparent;
-    }
+
     </style>
 </head>
 <body>
