--- a/index.html
+++ b/index.html
@@ -101,31 +101,31 @@
                                                     <span class="adjust">ABOUT ME</span>
                                                 </p>
                                             </transition>
-                                            <div class="flex" style="margin-bottom: 20px;">
-                                                <div style="position: relative; z-index: 1;" v-show="obj.aboutMe1">
+                                            <div class="flex mb-2">
+                                                <div class="rel z-1" v-show="obj.aboutMe1">
                                                     <div class="content-container1">
-                                                        <div class="sec_title" style="margin-top: 40px;">略歴</div>
+                                                        <div class="sec_title mt-4">略歴</div>
                                                         <p class="para">福岡大学を卒業後、もともと趣味としてやっていた音楽活動を2年ほど行い、その後1年間のカナダ留学を経て、約3年間宿泊施設で勤務。</p>
                                                         <p class="para">そこで出会った人たち、利用していたOTAサイトや予約管理システムに興味を持ちIT業界へ。</p>
                                                         <p class="para">今現在WEB制作に関する業務に携わっている。</p>
                                                     </div>
                                                 </div>
-                                                <div class="pc-only" style="position: absolute; z-index: 0;right: 5vw; width: 40%;">
+                                                <div class="pc-only abs z-0" id="pc-dog">
                                                     <img style="filter: grayscale(60%) brightness(.7);" src="img/10.jpg" alt="">
                                                 </div>
                                             </div>
                                             <transition name="bottom">
-                                                <div class="content-container2 mb-4 pc-only" style="position: relative; z-index: 1;" v-show="obj.aboutMe2" ref="aboutMe2">
+                                                <div class="content-container2 mb-4 pc-only rel z-1" v-show="obj.aboutMe2" ref="aboutMe2">
                                                     <div class="sec_title">自己紹介</div>
                                                     <p class="para">初めまして、井上領と申します。現在WEB制作の会社に所属しており、HTML、CSS、JavaScript(jQuery)、PHPを業務で使用しております。</p>
                                                     <p class="para">趣味でLaravelとVue.jsを用いたアプリ開発をしております。お時間あれば今回作成したポートフォリオをご覧頂ければと思います。</p>
                                                 </div>
                                             </transition>
-                                            <div class="content-container2 mb-4 sp-only" style="position: relative; z-index: 1;">
+                                            <div class="content-container2 mb-4 sp-only rel z-1">
                                                 <div class="sec_title">自己紹介</div>
-                                                <p class="para"><img id="dog" style="" src="img/10.jpg" alt="">初めまして、井上領と申します。現在WEB制作の会社に所属しており、HTML、CSS、JavaScript(jQuery)、PHPを業務で使用しております。趣味でLaravelとVue.jsを用いたアプリ開発をしております。お時間あれば今回作成したポートフォリオをご覧頂ければと思います。</p>
+                                                <p class="para"><img id="dog" src="img/10.jpg" alt="">初めまして、井上領と申します。現在WEB制作の会社に所属しており、HTML、CSS、JavaScript(jQuery)、PHPを業務で使用しております。趣味でLaravelとVue.jsを用いたアプリ開発をしております。お時間あれば今回作成したポートフォリオをご覧頂ければと思います。</p>
                                             </div>
-                                            <p class="tra" style="font-size: 2.5vw;text-align: right;"><a target="_blank" href="https://docs.google.com/document/d/14bj2fv6hF8RhSgoRHrEDpfA1eTQt22MNNj3rENHOwvY/edit">BACKGROUND→</a></p>
+                                            <p class="tra link"><a target="_blank" href="https://docs.google.com/document/d/14bj2fv6hF8RhSgoRHrEDpfA1eTQt22MNNj3rENHOwvY/edit">BACKGROUND→</a></p>
                                         </div>
                                     </div>
                                 </div>
@@ -150,10 +150,10 @@
                                                     </p>
                                                 </transition>
                                                 <transition name="bottom">
-                                                    <div class="flex" style="margin-bottom: 20px;position: relative;" v-show="obj.skill2">
+                                                    <div class="flex rel mb-2" v-show="obj.skill2">
                                                         <div class="front-end">
                                                             <div class="content-container1">
-                                                                <div class="sec_title" style="margin-top: 40px;">フロントエンド</div>
+                                                                <div class="sec_title mt-4">フロントエンド</div>
                                                                 <p class="para">2020年にHTML、CSS、JavaScriptの学習を開始。</p>
                                                                 <p class="para">知人のフロントエンドエンジニアに影響を受け、フレームワークはAngular.jsを選択。</p>
                                                                 <p class="para">今現在はVue.jsを主軸にVuetifyやVuex使ってアプリ開発を行っている。</p>
@@ -186,7 +186,7 @@
                                                     <p class="para">音楽をしていたという事もあり、作曲や弦楽器の演奏ができます。</p>
                                                     <p class="para">海外留学を経験して以来外国語に興味が持ち、日常英会話と少しの中国語が話せます。</p>
                                                 </div>
-                                                <p class="tra" style="font-size: 2.5vw;text-align: right;"><a target="_blank" href="https://docs.google.com/spreadsheets/d/1_ArB3lBxJ12s6uigQRcqyz8yCp15cwNzoGkc2RLIXgA/edit#gid=0">CURRICULUM VITAE→</a></p>
+                                                <p class="tra link"><a target="_blank" href="https://docs.google.com/spreadsheets/d/1_ArB3lBxJ12s6uigQRcqyz8yCp15cwNzoGkc2RLIXgA/edit#gid=0">CURRICULUM VITAE→</a></p>
                                             </div>
                                         </div>
                                     </div>
