--- a/index.html
+++ b/index.html
@@ -204,21 +204,21 @@
                                                 <div class="sec_title mt-4">ポートフォリオ</div>
                                             </div>
                                         </transition>
-                                        <div class="flex" style="margin-bottom: 20px; align-items: center;position: relative;overflow: hidden;">
-                                            <p class="tra" style="font-size: 2.5vw; position: absolute; right: 6.25vw; bottom: 5%; z-index: 2;"><a target="_blank" href="https://docs.google.com/presentation/d/1OWL1rnQQY9D_Vbecd7p7EayQgLnIkIvP15OC0xNNtpY/edit#slide=id.p1">DESCRIPTION→</a></p>
-                                            <img src="img/14.png" alt="" style="position: relative;z-index: 0;">
+                                        <div class="flex container1 rel">
+                                            <p class="tra abs z-2 link"><a target="_blank" href="https://docs.google.com/presentation/d/1OWL1rnQQY9D_Vbecd7p7EayQgLnIkIvP15OC0xNNtpY/edit#slide=id.p1">DESCRIPTION→</a></p>
+                                            <img src="img/14.png" class="rel z-0">
                                             <transition name="bottom">
-                                                <div class="flex"style="position: absolute; z-index: 1;width: 100%; align-items: center;" v-show="obj.port1">
+                                                <div class="flex abs z-1 w-100 align-item-center" v-show="obj.port1">
                                                     <div class="content-container1 w-50">
                                                         <div class="flex align-center title-container pc-only">
                                                             <div class="title_num" style="margin-right: 15%;">03</div>
                                                             <div class="title">PORTFOLIO</div>
                                                         </div>
-                                                        <div class="sec_title pc-only" style="margin-top: 30px;">ポートフォリオ</div>
+                                                        <div class="sec_title pc-only mt-4">ポートフォリオ</div>
                                                         <p class="para">今回JavaScriptフレームワークVue.jsとPHPフレームワークLaravelを使ってソーシャルネットワーキングサービスを作成しました。</p>
                                                         <p class="para">AJAX、REST API、N+1問題をできる限り意識した作りになっております。</p>
                                                     </div>
-                                                    <div id="special" class="message w-50 text-center tra" style="padding: 0 4%;">
+                                                    <div id="special" class="message w-50 text-center tra px-4">
                                                         <p><span >REACH OUT FOR</span><br>
                                                             <span >MODERN</span><br>
                                                             <span >TECHNOLOGY</span><br>
