--- a/index.html
+++ b/index.html
@@ -359,14 +359,14 @@
                                     <div class="li"><a href=""></a></div>
                                 </div>
                                 <div class="ul">
-                                    <div style="font-size: 20px;font-family: proxima-nova,sans-serif;padding-bottom: 10px;"><a class="text-white" href="https://github.com/lnoueryo">Github</a></div>
+                                    <div style="font-size: 20px;font-family: proxima-nova,sans-serif;padding-bottom: 10px;"><a class="text-white" href="https://github.com/lnoueryo" target="_blank">Github</a></div>
                                     <div class="li"><a href="https://github.com/lnoueryo/Mymemories">My Memories</a></div>
                                     <div class="li"><a href="https://github.com/lnoueryo/Mymemories/tree/master/app/Http/Controllers">Controller</a></div>
                                     <div class="li"><a href="https://github.com/lnoueryo/Inouegram/tree/master/app">Model</a></div>
                                     <div class="li"><a href="https://github.com/lnoueryo/Mymemories/tree/master/resources/ts/components">View</a></div>
                                 </div>
                                 <div class="ul">
-                                    <div style="font-size: 20px;font-family: proxima-nova,sans-serif;padding-bottom: 10px;"><a class="text-white" href="https://qiita.com/popo62520908">Qiita</a></div>
+                                    <div style="font-size: 20px;font-family: proxima-nova,sans-serif;padding-bottom: 10px;"><a class="text-white" href="https://qiita.com/popo62520908" target="_blank">Qiita</a></div>
                                     <div class="li" v-for="(page, index) in qiita" :key="index">
                                         <a :href="page.url" target="_blank">{{ page.title }}</a>
                                     </div>
